Agregar DTOs y manejo de excepciones para transacciones de clientes
- Se creó CustomerDTO para representar los datos del cliente.

- Se creó TransactionDTO para representar los detalles de la transacción.

- Se creó TransferRequestDTO para gestionar las solicitudes de transferencia.

- Se implementó CustomerNotFoundException para gestionar los errores relacionados con el cliente.

- Se agregó la clase ErrorResponse para respuestas de error estandarizadas.

- Se desarrolló GlobalExceptionHandler para gestionar las excepciones y devolver las respuestas HTTP adecuadas.